--- a/pages/writing/2025-04-06-coder.md
+++ b/pages/writing/2025-04-06-coder.md
@@ -1,9 +1,7 @@
-[← Home](index.html)
-
 # There has never been a better time to be a&nbsp;coder
 > Vibe-coding, low-code, medium-code... it's all good, and it's all a lot of&nbsp;fun
 
-*Apr 2025*
+{{date}}
 
 I picked up a coding project today that I hadn't touched in about a year, and I was completely blown away. Quickly, using modern tools, I could rebuild my personal context to get back to productivity in minutes.
 
