update styles and typos

--- a/pages/writing/2025-04-08-ux.md
+++ b/pages/writing/2025-04-08-ux.md
@@ -3,15 +3,15 @@
 
 {{date}}
 
-Toby Lütke, CEO of Shopify, just made the rounds on Twitter with an internal memo that he sent to his company. In it, he basically tells all of his employees that the time to mass adopt AI in their business is now. No matter which job or role you're in, you need to be using AI all the time, every day, or risk damaging your performance review. If you haven't seen it, you can read it yourself here:
+Toby Lütke, CEO of Shopify, just made the rounds on Twitter with an internal memo that he sent to his company. In it, he basically tells all of his employees that the time to mass adopt AI in their business is now. No matter which job or role you're in, you need to be using AI all the time, every day, or risk damaging your performance review. If you haven't seen it, read it for yourself here:
 
 ::tweet(https://x.com/tobi/status/1909231499448401946)
 
-This echoes I've heard from other CEOs and CTOs around the industry — they recognize the usefulness and productivity gains from using AI tools like ChatGPT or Claude. But for some reason, that isn't enough for their employees to actually adopt them at scale. They have to be threatened with bad reviews.
+This echoes what I've heard from other CEOs in and around tech — they recognize the usefulness and productivity gains on offer from AI tools like ChatGPT and Claude. But for some reason, that isn't enough for their employees to actually adopt them at scale. They have to be threatened with bad reviews.
 
-The AI tools that seem to spread like wildfire within workforces are things like [Cursor](http://cursor.com/) for interactive coding and [Granola](https://www.granola.ai/) for automated note-taking. These tools are casually dismissed as "GPT wrappers" by some industry commentators — after all, ChatGPT (or Sonnet or Gemini or Llama or Deepseek) are doing all the "real work", right?
+The AI tools that seem to spread by themselves within workforces are things like [Cursor](http://cursor.com/) for interactive coding and [Granola](https://www.granola.ai/) for automated note-taking. These tools are casually dismissed as "GPT wrappers" by some industry commentators — after all, ChatGPT (or Sonnet or Gemini or Llama or Deepseek) is doing all the "real work", right?
 
-They seem to be throwing away all the lessons we've learned about software distribution. It's like they saw Instagram and waived it off as an "ImageMagick wrapper"... or Dropbox as an ["rsync wrapper"](https://news.ycombinator.com/item?id=8863).
+People who take this perspective seem to be throwing away all the lessons we've learned about software distribution. It's like they saw Instagram and waived it off as an "ImageMagick wrapper"... or Dropbox as an ["rsync wrapper"](https://news.ycombinator.com/item?id=8863).
 
 Those products won because they made powerful, highly technical tools accessible through thoughtful design. The biggest barrier to mass AI adoption is not capability or intelligence; we have those in spades. **It's UX**.
 
@@ -21,8 +21,8 @@ The internet recently went wild using ChatGPT's image generation capabilities to
 
 It took the commercialization of the graphical user interface for traditional computing to move beyond a technical audience. With AI, we're still in our command-line phase.
 
-The magic of something like Cursor is that there's a workflow which is heavily orchestrated to help you utilize the power that LLMs have the capability to provide. Sure — at its core, there's a series of prompts and calls to base models that generates all the code you use... but this is marshaled through a UI that keeps you continuously flowing through the prompt > generate > eval > test loop.
+The magic of something like Cursor is that there's a workflow which is heavily orchestrated to help users utilize the power that LLMs have can provide. Sure — at its core, there's a series of prompts and calls to base models that generates the code... but this is marshaled through a UI that keeps users continuously flowing through the *prompt > generate > eval > test* loop.
 
-At the end of the day, AIs are still computers, and they're providing value to humans. So, all the lessons of human-computer interaction we've learned over the years continue to apply. The constraints and capabilities have evolved, but the principles are the same.
+At the end of the day, AIs are still computers, and they're providing value to humans. So all the lessons of human-computer interaction we've learned over the years continue to apply. The constraints and capabilities have evolved, but the principles are the same.
 
-We're still barely scratching the surface. For all of its success, tools like Cursor are still built for a highly technical audience. AI adoption won't come from more powerful models or CEO mandates—it will come from thoughtfully designed interfaces that make intelligence accessible to everyone.
+We're still barely scratching the surface. For all of its success, tools like Cursor are still built for a highly technical audience. AI adoption won't come from more powerful models or CEO mandates — it will come from thoughtfully designed interfaces that make intelligence accessible to everyone.
