--- a/pages/writing/2025-04-08-ux.md
+++ b/pages/writing/2025-04-08-ux.md
@@ -21,7 +21,7 @@ The internet recently went wild using ChatGPT's image generation capabilities to
 
 It took the commercialization of the graphical user interface for traditional computing to move beyond a technical audience. With AI, we're still in our command-line phase.
 
-The magic of something like Cursor is that there's a workflow which is heavily orchestrated to help users utilize the power that LLMs have can provide. Sure — at its core, there's a series of prompts and calls to base models that generates the code... but this is marshaled through a UI that keeps users continuously flowing through the *prompt > generate > eval > test* loop.
+The magic of something like Cursor is that there's a workflow which is heavily orchestrated to help users utilize the power that LLMs can provide. Sure — at its core, there's a series of prompts and calls to base models that generates the code... but this is marshaled through a UI that keeps users continuously flowing through the *prompt > generate > eval > test* loop.
 
 At the end of the day, AIs are still computers, and they're providing value to humans. So all the lessons of human-computer interaction we've learned over the years continue to apply. The constraints and capabilities have evolved, but the principles are the same.
 
