added rss feed credits to Grant Slatton for the prompt

--- a/pages/writing/2025-04-08-ux.md
+++ b/pages/writing/2025-04-08-ux.md
@@ -17,7 +17,7 @@ Those products won because they made powerful, highly technical tools accessible
 
 ![Always has been](assets/images/ux-astro-meme.png)
 
-The internet recently went wild using ChatGPT's image generation capabilities to create Studio Ghibli-inspired versions of favorite family photos and memes. They did this because someone from OpenAI posted the idea and the prompt was fairly easy to replicate. Everyone could have done this on their own, but they didn't. A tool with infinite flexibility, no matter how powerful, is inaccessible to a general audience.
+The internet recently went wild using ChatGPT's image generation capabilities to create Studio Ghibli-inspired versions of favorite family photos and memes. They did this because Twitter user *@GrantSlatton* [promoted the idea](https://x.com/GrantSlatton/status/1904631016356274286) and the prompt was fairly easy to replicate. Everyone could have done this on their own, but they didn't. A tool with infinite flexibility, no matter how powerful, is inaccessible to a general audience.
 
 It took the commercialization of the graphical user interface for traditional computing to move beyond a technical audience. With AI, we're still in our command-line phase.
 
